--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const latestPosts = posts.slice(0, 6);
         </a>
       </div>
 
-      <div class="grid gap-6 md:grid-cols-2">
+      <div class="space-y-6">
         {latestPosts.map((post) => (
           <BlogCard post={post} />
         ))}
